name: SPL
version: 0.0.0.920
cabal-version: >=1.10
build-type: Custom
license: LGPL
license-file: COPYING.LESSER
bug-reports: https://github.com/kayuri/HNC/issues
synopsis: A source-to-source translator of a variant of ML core into C++.
description:  
author: Andy Melnikov <andy.melnikov@gmail.com>
maintainer: Andy Melnikov <andy.melnikov@gmail.com>    
homepage: https://github.com/kayuri/HNC/wiki
category: compiler
tested-with: GHC ==7.0.2 GHC ==7.2.2
data-dir: ""
description: 
    HNC stands for HN compiler. HN is a tool to facilitate writing 
    C programs. It is a macro language for C. It is not embedded 
    in C but uses a new syntax and a new type system to express C
    programs. It can be used by humans to prototype programs or 
    separate functions in C or as an intermediate language 
    for C generators.

source-repository head
    type: git
    location: https://github.com/kayuri/NHC.git
 
executable spl-hnc
    build-depends: HUnit ==1.*, QuickCheck ==2.*, base ==4.*,
                   bytestring ==0.*, containers ==0.*, directory ==1.*,
                   hoopl ==3.8.7.4, mtl ==2.*, parsec >=3.1,
                   unification-fd ==0.6.0
    main-is: HNC.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules: HN.Optimizer.Node, Bar
    ghc-options: -W -fno-warn-incomplete-patterns -fno-warn-missing-local-sigs -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-orphans
 
executable spl-test-hunit-exe
    build-depends: HUnit ==1.*, QuickCheck ==2.*, base ==4.*,
                   bytestring ==0.*, containers ==0.*, directory ==1.*,
                   hoopl, parsec >=3.1, mtl ==2.*,
                   unification-fd ==0.6.0
    main-is: Test/Main.hs
    other-modules: Bar
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    ghc-options: -W -fno-warn-incomplete-patterns -fno-warn-missing-local-sigs -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-orphans
 
executable spli
    build-depends: HUnit ==1.*, QuickCheck ==2.*, base ==4.*,
                   bytestring ==0.*, containers ==0.*, directory ==1.*,
                   hoopl, mtl ==2.*, parsec >=3.1,
                   unification-fd ==0.6.0
    main-is: SPLI.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
 
executable splm
    build-depends: HUnit ==1.*, QuickCheck ==2.*, base ==4.*,
                   bytestring ==0.*, containers ==0.*, directory ==1.*,
                   hoopl, mtl ==2.*, parsec >=3.1,
                   unification-fd ==0.6.0
    main-is: M.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
 
executable spl-test-adhoc-hn
    build-depends: HUnit ==1.*, QuickCheck ==2.*, base ==4.*,
                   bytestring ==0.*, containers ==0.*, directory ==1.*,
                   hoopl, mtl ==2.*, parsec >=3.1,
                   unification-fd ==0.6.0
    main-is: HN_Tests.hs
    buildable: True
    default-language: Haskell98
    hs-source-dirs: .
 
executable spl-test-adhoc-spl
    build-depends: HUnit ==1.*, QuickCheck ==2.*, base ==4.*,
                   bytestring ==0.*, containers ==0.*, directory ==1.*,
                   hoopl, mtl ==2.*, parsec >=3.1,
                   unification-fd ==0.6.0
    main-is: SPL_Tests.hs
    buildable: True
    default-language: Haskell98
    hs-source-dirs: .
 
test-suite spl-test-hunit
    build-depends: HUnit ==1.*, QuickCheck ==2.*, base ==4.*,
                   bytestring ==0.*, containers ==0.*, directory ==1.*,
                   hoopl, mtl ==2.*, parsec >=3.1,
                   unification-fd ==0.6.0
    type: exitcode-stdio-1.0
    main-is: Test/Main.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .