name: SPL
version: 0.0.0.920
cabal-version: >=1.10
build-type: Custom
license: LGPL
license-file: COPYING.LESSER
bug-reports: https://github.com/kayuri/HNC/issues
synopsis: A source-to-source translator of a variant of ML core into C++.
description:  
author: Andy Melnikov <andy.melnikov@gmail.com>
maintainer: Andy Melnikov <andy.melnikov@gmail.com>    
homepage: https://github.com/kayuri/HNC/wiki
category: compiler
tested-with: GHC ==7.4.2 GHC ==7.6.3
data-dir: ""
description: 
    HNC stands for HN compiler. HN is a tool to facilitate writing 
    C programs. It is a macro language for C. It is not embedded 
    in C but uses a new syntax and a new type system to express C
    programs. It can be used by humans to prototype programs or 
    separate functions in C or as an intermediate language 
    for C generators.

source-repository head
    type: git
    location: https://github.com/kayuri/NHC.git
 
executable spl-hnc
    build-depends: HUnit, QuickCheck, base,
                   bytestring, containers, directory,
                   hoopl >=3.10.1.0, mtl, parsec,
                   unification-fd >=0.10, recursion-schemes, uuagc,
                   transformers
    main-is: HNC.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules: HN.Optimizer.Node, Bar
    ghc-options: -W -fno-warn-incomplete-patterns -fno-warn-missing-local-sigs -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-orphans -fno-warn-tabs
 
executable spl-test-hunit-exe
    build-depends: HUnit, QuickCheck, base,
                   bytestring, containers, directory,
                   hoopl >=3.10.1.0, mtl, parsec,
                   unification-fd >=0.10, recursion-schemes, uuagc,
                   transformers
    main-is: Test/Main.hs
    other-modules: Bar
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    ghc-options: -W -fno-warn-incomplete-patterns -fno-warn-missing-local-sigs -fno-warn-missing-signatures -fno-warn-name-shadowing -fno-warn-orphans -fno-warn-tabs
 
executable spli
    build-depends: HUnit, QuickCheck, base,
                   bytestring, containers, directory,
                   hoopl >=3.10.1.0, mtl, parsec,
                   unification-fd >=0.10, recursion-schemes, uuagc
    main-is: SPLI.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    ghc-options: -fno-warn-tabs

 
executable splm
    build-depends: HUnit, QuickCheck, base,
                   bytestring, containers, directory,
                   hoopl >=3.10.1.0, mtl, parsec,
                   unification-fd >=0.10, recursion-schemes, uuagc
    main-is: M.hs
    buildable: True
    default-language: Haskell2010
    ghc-options: -fno-warn-tabs
    hs-source-dirs: .
    ghc-options: -fno-warn-tabs
 
executable spl-test-adhoc-hn
    build-depends: HUnit, QuickCheck, base,
                   bytestring, containers, directory,
                   hoopl >=3.10.1.0, mtl, parsec,
                   unification-fd >=0.10, recursion-schemes, uuagc
    main-is: HN_Tests.hs
    buildable: True
    default-language: Haskell98
    hs-source-dirs: .
    ghc-options: -fno-warn-tabs
 
executable spl-test-adhoc-spl
    build-depends: HUnit, QuickCheck, base,
                   bytestring, containers, directory,
                   hoopl >=3.10.1.0, mtl, parsec,
                   unification-fd >=0.10, recursion-schemes, uuagc
    main-is: SPL_Tests.hs
    buildable: True
    default-language: Haskell98
    hs-source-dirs: .
    ghc-options: -fno-warn-tabs

