Name:		SPL
Version:        0.0.0.913
Cabal-Version:  >= 1.10
License:        LGPL
Author:		<inv2004@gmail.com>
Author:         Andy Melnikov <andy.melnikov@gmail.com>
Synopsis:       A source-to-source translator of a variant of ML core into C++.
License-File:   COPYING.LESSER
Bug-Reports:	http://code.google.com/p/inv/issues
Tested-With:	GHC == 7.0.2
Build-Type:	Custom
-- , , , , , haskell98 == 1.*, directory == 1.*, QuickCheck == 2.*


Executable spl-hnc
  Main-Is:         HNC.hs
  Other-Modules:   Bar
  Default-Language: Haskell2010
  Build-Depends:  base == 4.*, containers == 0.*, HUnit == 1.*, bytestring == 0.*, hoopl >= 3.8.7.1, mtl == 2.*, parsec >= 3.1

Executable spl-test-hunit-exe
  Main-Is: Test/Main.hs
  Default-Language: Haskell2010
  Build-Depends:  base == 4.*, containers == 0.*, HUnit == 1.*, bytestring == 0.*, hoopl >= 3.8.7.1, mtl == 2.*, parsec >= 3.1, directory == 1.*, QuickCheck == 2.*
  Other-Modules:  Bar

Test-Suite spl-test-hunit
  Main-Is: Test/Main.hs
  Type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  Build-Depends:  base == 4.*, containers == 0.*, HUnit == 1.*, bytestring == 0.*, hoopl >= 3.8.7.1, mtl == 2.*, parsec >= 3.1, directory == 1.*, QuickCheck == 2.*
  Other-Modules:   Bar

Executable spli
  Main-Is:	SPLI.hs
  default-language: Haskell2010
  Build-Depends:  base == 4.*, containers == 0.*, HUnit == 1.*, bytestring == 0.*, hoopl >= 3.8.7.1, mtl == 2.*, parsec >= 3.1, directory == 1.*, QuickCheck == 2.*, haskell98 == 1.*
  Other-Modules:   Bar

Executable     spl-test-adhoc-hn
  Main-Is:        HN_Tests.hs
  default-language: Haskell98
  Build-Depends:  base == 4.*, containers == 0.*, HUnit == 1.*, bytestring == 0.*, hoopl >= 3.8.7.1, mtl == 2.*, parsec >= 3.1, directory == 1.*, QuickCheck == 2.*
  Other-Modules:  Bar

Executable	spl-test-adhoc-spl
  Main-Is:	SPL_Tests.hs
  default-language: Haskell98
  Build-Depends:  base == 4.*, containers == 0.*, HUnit == 1.*, bytestring == 0.*, hoopl >= 3.8.7.1, mtl == 2.*, parsec >= 3.1, directory == 1.*, QuickCheck == 2.*
  Other-Modules:   Bar

